Moved some files around, and fixed a bug where the page would overflow if the device width was too short. Closes #2

--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html, body {
 }
 
 .jumbotron#main {
+	padding-top: 0em;
+	margin-top: 0em;
 	padding-bottom: 0em;
 	margin-bottom: 0em;
 	height: 100%;
